[package]
name = "pollux"
version = "0.1.0"
edition = "2021"

[dependencies]
cronjob = "0.4.17"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
once_cell = "1.19.0"
reqwest = "0.12.7"
rocket = "0.5.1"
serde = "1.0.209"
serde_derive = "1.0.209"
serde_json = "1.0.127"
sqlx = { version = "0.8.2", features = [ "runtime-tokio", "tls-native-tls", "sqlite" ] }
time = "0.3.36"
tokio = "1.40.0"

